tests/errors/stud/bad-expr-parsing.c
void main()
{
	int x = int && int; // infinite array?
	printid(x);
}